[package]
name = "crde_client_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
log = "0.4.17"
regex = "1.6.0"
serde = "1.0.143"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew-router = "0.16.0"
