[package]
name = "crde_client_example"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.23"
gloo = "0.8.0"
js-sys = "0.3.59"
log = "0.4.17"
regex = "1.6.0"
serde = "1.0.143"
serde_cbor = "0.11.2"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew-router = "0.16.0"
