[package]
name = "crdt_server_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["ws", "headers"] }
cached = "0.38.0"
headers = "0.3.7"
serde = { version = "1.0.144", features = ["rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
